@@ -105,35 +105,6 @@ PANOPTICON_SESSION_TOKEN_ALGORITHM=sha512
 # a reverse proxy.
 PANOPTICON_BEHIND_LOAD_BALANCER=false
 
-# Automatic IP block on failed login attempts
-# Set to true to have Panopticon automatically block an IP address if more than
-# a certain number of failed login attempts come from it in a specific period.
-PANOPTICON_LOGIN_FAILURE_ENABLE=true
-
-# Maximum login failures
-# Automatic, but temporary, IP blocking will be effected if there are this many
-# failed login attempts coming from an IP address within the "Login failure
-# window".
-PANOPTICON_LOGIN_MAX_FAILURES=5
-
-# Login failure window (seconds)
-# Automatic, but temporary, IP blocking will be effected if there are at least
-# "Maximum login failures" failed login attempts coming from an IP address
-# within the number of seconds set in this option.
-PANOPTICON_LOGIN_FAILURE_WINDOW=60
-
-# IP lockout time (seconds)
-# When an automatic block is placed on an IP address it will last this many
-# seconds.
-PANOPTICON_LOGIN_LOCKOUT=900
-
-# Extend IP lockout time
-# When enabled, every time a blocked IP address tries to access Akeeba
-# Panopticon it will have its lockout time reset, i.e. the lockout will be
-# extended for another “IP lockout time” seconds. This penalises some bots, but
-# it comes at the expense of slowing down legitimate access to Panopticon.
-PANOPTICON_LOGIN_LOCKOUT_EXTEND=false
-
 # Collect Anonymous Usage Statistics
 # Should Akeeba Panopticon send anonymous information about the Panopticon, PHP,
 # and database server you are using? This information is used to help Akeeba
@@ -171,6 +142,40 @@ PANOPTICON_MFA_SUPERUSER=false
 # user with the Administrator privilege, regardless of their user group
 # participation.
 PANOPTICON_MFA_ADMIN=false
+
+# Automatic IP block on failed login attempts
+# Set to true to have Panopticon automatically block an IP address if more than
+# a certain number of failed login attempts come from it in a specific period.
+PANOPTICON_LOGIN_FAILURE_ENABLE=true
+
+# MFA failure counts as login failure
+# Should Multi-factor Authentication failures count as login failures for the
+# purpose of automatic IP blocking on failed login attempts?
+PANOPTICON_MFA_COUNTS_AS_LOGIN_FAILURE=false
+
+# Maximum login failures
+# Automatic, but temporary, IP blocking will be effected if there are this many
+# failed login attempts coming from an IP address within the "Login failure
+# window".
+PANOPTICON_LOGIN_MAX_FAILURES=5
+
+# Login failure window (seconds)
+# Automatic, but temporary, IP blocking will be effected if there are at least
+# "Maximum login failures" failed login attempts coming from an IP address
+# within the number of seconds set in this option.
+PANOPTICON_LOGIN_FAILURE_WINDOW=60
+
+# IP lockout time (seconds)
+# When an automatic block is placed on an IP address it will last this many
+# seconds.
+PANOPTICON_LOGIN_LOCKOUT=900
+
+# Extend IP lockout time
+# When enabled, every time a blocked IP address tries to access Akeeba
+# Panopticon it will have its lockout time reset, i.e. the lockout will be
+# extended for another “IP lockout time” seconds. This penalises some bots, but
+# it comes at the expense of slowing down legitimate access to Panopticon.
+PANOPTICON_LOGIN_LOCKOUT_EXTEND=false
 
 ## =============================================================================
 ## HTTP(s) Proxy
