@@ -1449,6 +1449,7 @@ PANOPTICON_SYSCONFIG_LBL_EMAILTEST_IS_DISABLED="You have disabled Mail Sending; 
 PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_SUPERUSER="Force MFA for Superusers"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_ADMIN="Force MFA for Administrators"
 PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_FORCE_GROUPS="Force MFA for these Groups"
+PANOPTICON_SYSCONFIG_LBL_FIELD_MFA_COUNTS_AS_LOGIN_FAILURE="MFA failure counts as login failure"
 
 [Tasks]
 PANOPTICON_TASKS_TITLE="Tasks"
