@@ -2,7 +2,8 @@
 Akeeba Panopticon 1.2.3
 ================================================================================
 + Domain registration and expiration warnings
-+ Force MFA for specific user groups, superusers, or administrators
++ Force MFA for specific user groups, superusers, or administrators [gh-723]
++ Option to treat MFA failures as login failures [gh-723]
 # [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)
 # [HIGH] Cannot connect to old Akeeba Backup for WordPress (version 7)
 # [HIGH] PHP error when WordPress fails to provide version information
